more functions commenting
